add delay on init

--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@ function randomColorBall() {
   i += Math.PI / 6
 }
 
-randomColorBall();
+setTimeout(() => {randomColorBall();}, 5000);
 
 </script>
